--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -28,6 +28,13 @@
                             asp-controller="Hospitales" 
                             asp-action="Index">Hospitales</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-controller="Doctores"
+                               asp-action="DoctoresEspecialidad">
+                               Doctores especialidad
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
